# BluetoothProgramming

./: CMakeLists.txt  README.md  gen_eclipse.sh
src/RFCOMM/: CMakeLists.txt  rfcomm-client.cpp  rfcomm-server.cpp
src/SimpleScan/: CMakeLists.txt  simplescan.cpp
